fix: add rewrite uri middleware to handle trailing slash
